test/invalid/fc36956_SubtypingCyclesDirectly/Alfa.plume
/**
 * Alfa.plume
 *
 * Test: a class cannot extend itself directly
 * Alfa extends Alfa
 * @author Carlos Mao de Ferro
 * @version $Id: Alfa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Alfa extends Alfa is
	field x : Integer